--- a/index.html
+++ b/index.html
@@ -4,27 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>dev分支</title>
+    <script src="index.js"></script>
   </head>
   <body>
     <p>js</p>
-    <script>
-      var a = 5;
-      var b = 6;
-      var c = '5';
-      document.write(a+b+'<br/>');
-      document.write(a+c+'<br/>');
-      document.write(a-b+'<br/>');
-      document.write(a-c+'<br/>');
-
-      document.write(a>b);
-      document.write('<br/>');
-      document.write(a<b || b<c);
-      document.write('<br/>');
-      document.write(a<b && b<c);
-      document.write('<br/>');
-      document.write(a===c);
-      document.write('<br/>');
-      document.write(a>b?'aaa':'bbb');
-    </script>
   </body>
 </html>
