--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>dev分支</title>
-    <script src="index.js"></script>
   </head>
   <body>
-    <p>js</p>
+    <p id="demo">js</p>
+    <script src="index.js"></script>
   </body>
 </html>
